# course/gateway/go_gateway_demo/controller/service.go
@@ -1,0 +1,46 @@
+/**
+ * @Author: vincent
+ * @Description:
+ * @File:  service
+ * @Version: 1.0.0
+ * @Date: 2022/6/2 20:01
+ */
+
+package controller
+
+import (
+	"go-examples/course/gateway/go_gateway_demo/dto"
+	"go-examples/course/gateway/go_gateway_demo/middleware"
+
+	"github.com/gin-gonic/gin"
+)
+
+type ServiceController struct{}
+
+func ServiceRegister(group *gin.RouterGroup) {
+	service := &ServiceController{}
+	group.GET("/service_list", service.ServiceList)
+}
+
+// ServiceList godoc
+// @Summary 服务列表
+// @Description 服务列表
+// @Tags 服务管理
+// @ID /service/service_list
+// @Accept json
+// @Produce json
+// @Param info query string false "关键词"
+// @Param page_size query string true "每页个数"
+// @Param page_no query string true "当前页数"
+// @Success 200 {object} middleware.Response{data=dto.ServiceListOutput} "success"
+// @Router /service/service_list [get]
+func (service *ServiceController) ServiceList(c *gin.Context) {
+	params := &dto.ServiceListInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	out := &dto.ServiceListOutput{}
+	middleware.ResponseSuccess(c, out)
+}
